<resources>
    <string name="app_name">Sence</string>

    <!-- Kayıt Ol -->
    <string name="title_activity_register">RegisterActivity</string>
    <string name="registerUsername">Kullanıcı adı</string>
    <string name="registerFullname">Adı Soyadı</string>
    <string name="registerEmail">E-posta</string>
    <string name="registerPassword">Şifre</string>
    <string name="registerBtn">Kayıt Ol</string>
    <string name="registerLogin">Hesabın var mı? Giriş yap</string>

    <!-- Giriş Yap -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="loginEmail">E-posta</string>
    <string name="loginPassword">Şifre</string>
    <string name="loginBtn">Giriş Yap</string>
    <string name="loginRegister">Hesabın yok mu? Kayıt ol</string>

    <!-- BottomNavigationView Başlıkları -->
    <string name="title_profile">Profil</string>
    <string name="title_add">Ekle</string>
    <string name="title_search">Ara</string>
    <string name="title_home">Anasayfa</string>

    <!--Diğer Profiller -->
    <string name="ongoingPoll_Btn">Devam Eden Anketler</string>
    <string name="completedPoll_Btn">Biten Anketler</string>
    <string name="votedPoll_Btn">Oylanan Anketler</string>
    <string name="followers_Btn">Takipçiler</string>
    <string name="followed_Btn">Takip Edilenler</string>

    <!-- Kullanıcı Profili -->
    <string name="userprofileEditProfile">Profil Düzenle</string>
    <string name="userprofileAnketlerim">ANKETLERİM</string>
    <string name="userprofileSence">SENCE</string>
    <string name="userprofileBence">BENCE</string>
    <string name="userprofileFollower">Takipçi</string>
    <string name="userprofileFollow">Takip</string>
    <string name="userprofileRequest">İstek</string>
    <string name="userprofileUsername">Kullanıcı adı</string>
    <string name="userprofileFullname">Kullanıcı Adı Soyadı</string>
    <string name="userprofileExit">ÇIKIŞ</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_add_survey">AddSurveyActivity</string>


    <!-- Profil Düzenleme -->
    <string name="editUsername">Kullanıcı Adı</string>
    <string name="editFullname">İsim-Soyisim</string>
    <string name="editChange">Profil Resmini Değiştir</string>
    <string name="editSave">KAYDET</string>
    <string name="editOpen">Hesabınız açık</string>
    <string name="editProfile">Profil Düzenle</string>

    <!-- Ara -->
    <string name="searchHint">Ara</string>
    <string name="searchUsername">Kullanıcı adı</string>
    <string name="searchFullname">Adı Soyadı</string>

    <!-- Anket Yap -->
    <string name="surveyTitle">PAYLAŞ</string>
    <string name="surveyQuestion">Sorunuz..?</string>
    <string name="surveySecret">Adınız gizlensin mi?</string>
    <string name="surveyCategory">Anket Kategorisi: </string>
    <string-array name="surveyCategories">
        <item>Alışveriş</item>
        <item>Elektronik</item>
        <item>Ev-Yaşam</item>
        <item>Anne-Bebek</item>
        <item>Spor</item>
        <item>Kitap,Müzik,Film,Oyun</item>
        <item>Tatil,Eğlence</item>
        <item>Otomobil-Motorsiklet</item>
        <item>Diğer</item>
    </string-array>
    <string name="surveyTime">Anket Süresi: </string>
    <string-array name="surveyTimes">
        <item>30 dk</item>
        <item>1 saat</item>
        <item>1 gün</item>
        <item>3 gün</item>
        <item>5 gün</item>
        <item>7 gün</item>
    </string-array>

    <string name="setText">Kayıt yapılıyor, Lütfen bekleyin.</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_notification_channel_id">Sence</string>
    <string name="message">Bir arkadaşlık isteğiniz var.</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>


</resources>
