<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.survey.SurveyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/windowBackground">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/surveyShare_Tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:text="@string/surveyTitle"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <EditText
                android:id="@+id/addQuestion_Et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/surveyQuestion"
                android:maxLines="5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/addFirstImage_Iv"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_weight="@integer/google_play_services_version"
                    android:padding="8dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher" />

                <ImageView
                    android:id="@+id/addSecondImage_Iv"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_weight="@integer/google_play_services_version"
                    android:padding="8dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>

            <Switch
                android:id="@+id/addIsSecret_Sw"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:text="@string/surveySecret" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/addCategory_Tv"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/surveyCategory" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/addCategory_Sp"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:entries="@array/surveyCategories"
                    android:prompt="@string/surveyCategory"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/addSurveyTime_Tv"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/surveyTime" />


                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/addTime_Sp"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:entries="@array/surveyTimes"
                    android:prompt="@string/surveyTime"
                    android:spinnerMode="dialog" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</FrameLayout>

