<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profilePhoto_Iv"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:adjustViewBounds="false"
                android:src="@drawable/ic_account_circle_black_24dp" />

            <TextView
                android:id="@+id/profileName_Tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/followers_Btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/profileNumber_Btn"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    tools:text="@string/followers_Btn" />

                <Button
                    android:id="@+id/followed_Btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/profileNumber_Btn"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    tools:text="@string/followed_Btn" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ongoingPoll_Btn"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="341dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/profile_Btn"
                    tools:text="@string/ongoingPoll_Btn" />

                <Button
                    android:id="@+id/numberOngoingPoll_Btn"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/profileNumber_Btn" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/completedPoll_Btn"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="341dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/profile_Btn"
                    android:elevation="0dp"
                    tools:text="@string/completedPoll_Btn" />

                <Button
                    android:id="@+id/numberCompletedPoll_Btn"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/profileNumber_Btn" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/votedPoll_Btn"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="341dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/profile_Btn"
                    android:clickable="false"
                    tools:text="@string/votedPoll_Btn" />

                <Button
                    android:id="@+id/numberVotedPoll_Btn"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:background="@color/profileNumber_Btn" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


</FrameLayout>