<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SurveyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close_Iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_close" />

                <TextView
                    android:id="@+id/share_Tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/surveyTitle"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/surveyQuestion_Et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/surveyQuestion"
            android:maxLines="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/firstImage_Iv"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/secondImage_Iv"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/surveyCategory_Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surveyCategory" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/category_Sp"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:entries="@array/surveyCategories"
                android:prompt="@string/surveyCategory"
                android:spinnerMode="dialog"></androidx.appcompat.widget.AppCompatSpinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/surveyTime_Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surveyTime" />


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/time_Sp"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:entries="@array/surveyTimes"
                android:prompt="@string/surveyTime"
                android:spinnerMode="dialog"></androidx.appcompat.widget.AppCompatSpinner>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>